--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/whenugopal/whenugopal/issues"
   },
-  "homepage": "https://github.com/whenugopal/whenugopal#readme"
+  "homepage": "https://github.com/whenugopal/whenugopal#readme",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "puppeteer": "^21.1.0"
+  },
+  "type": "module"
 }
